# segmental-csv

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
msw/: .gitattributes  .gitignore  SegmentalCsvViewer.vcxproj  SegmentalCsvViewer.vcxproj.filters  common.props  segmental-csv.sln  segmental-csv.vcxproj  segmental-csv.vcxproj.filters
src/: CMakeLists.txt  column_type.c  column_type.h  csv_parser.c  csv_parser.h  date_time.c  date_time.h  defs.h  int.c  int.h  item.c  item.h  list.c  list.h  money.c  money.h  segment.c  segment.h  segmental_csv_parser.c  segmental_csv_parser.h  segments.c  segments.h  str.c  str.h
src/gui/: CMakeLists.txt  ScvApp.cpp  ScvApp.h  ScvArtProvider.cpp  ScvArtProvider.h  ScvDefs.h  ScvDocument.cpp  ScvDocument.h  ScvGrid.cpp  ScvGrid.h  ScvGridCellAttrProvider.cpp  ScvGridCellAttrProvider.h  ScvMainFrame.cpp  ScvMainFrame.h  ScvPanel.cpp  ScvPanel.h  ScvTable.cpp  ScvTable.h  ScvView.cpp  ScvView.h  xgettext.list  xgettext.sh
src/gui/res/: CMakeLists.txt  LICENSE  MacOSXBundleInfo.plist.in  icon.xcf  menu_bar.xrc
src/gui/res/i18n/: SegmentalCsvViewer_en.po  SegmentalCsvViewer_zh.po  xrc_en.po  xrc_zh.po
src/gui/res/images/: CMakeLists.txt
test/: CMakeLists.txt  test_csv_parser.cpp  test_date_time.cpp  test_defs.cpp  test_int.cpp  test_list.cpp  test_money.cpp  test_segmental_csv_parser.cpp  test_str.cpp
